--- a/src/main/resources/templates/signUp-form.html
+++ b/src/main/resources/templates/signUp-form.html
@@ -18,7 +18,7 @@
         <input type="password" name="password" placeholder="비밀번호" required>
         <input type="password" name="confirmPassword" placeholder="비밀번호 확인" required>
 
-        <label for="role">역할 선택:</label>
+        <label for="role">역할 선택</label>
         <select name="role" id="role" required>
             <option value="NORMAL">일반 관람객</option>
             <option value="VIP">VIP 관람객</option>
