--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>티켓 히어로</title>
-    <link rel="stylesheet" th:href="@{/style_main.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/style_main.css}" />
 </head>
 <body>
 <div class="background-wrapper">
