--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
     <h1>티켓 히어로</h1>
     <form class="login" th:action="@{/login}" method="post">
-        <input type="text" name="ID" placeholder="아이디" required>
+        <input type="text" name="loginId" placeholder="아이디" required>
         <input type="password" name="password" placeholder="비밀번호" required>
         <button type="submit">로그인</button>
     </form>
