--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -48,22 +48,22 @@
 
     <div class="user-info">
         <h2>사용자 정보</h2>
-        <p class="info-text">이름: <span th:text="${user.name}">홍길동</span></p>
-        <p class="info-text">등급: <span th:text="${user.grade}">VIP</span></p>
+        <p class="info-text">이름: <span th:text="${loginMember.loginID}"></span></p>
+        <p class="info-text">등급: <span th:text="${loginMember.role}"></span></p>
     </div>
 
-    <div class="reservation-info">
-        <h2>나의 좌석</h2>
-        <ul id="reservation-list" class="reservation-list" th:if="${!#lists.isEmpty(reservations)}">
-            <li th:each="reservation : ${reservations}">
-                <p class="info-text">공연 이름: <span th:text="${reservation.performanceName}">공연 이름</span></p>
-                <p class="info-text">공연 날짜: <span th:text="${reservation.date}">공연 날짜</span></p>
-                <p class="info-text">공연 시간: <span th:text="${reservation.time}">공연 시간</span></p>
-                <p class="info-text">좌석 번호: <span th:text="${reservation.seat}">좌석 번호</span></p>
-            </li>
-        </ul>
-        <p id="no-reservations" th:if="${#lists.isEmpty(reservations)}">예약 내역이 없습니다.</p>
-    </div>
+<!--    <div class="reservation-info">-->
+<!--        <h2>나의 좌석</h2>-->
+<!--        <ul id="reservation-list" class="reservation-list" th:if="${!#lists.isEmpty(reservations)}">-->
+<!--            <li th:each="reservation : ${}">-->
+<!--                <p class="info-text">공연 이름: <span th:text="${}">공연 이름</span></p>-->
+<!--                <p class="info-text">공연 날짜: <span th:text="${}">공연 날짜</span></p>-->
+<!--                <p class="info-text">공연 시간: <span th:text="${}">공연 시간</span></p>-->
+<!--                <p class="info-text">좌석 번호: <span th:text="${}">좌석 번호</span></p>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--        <p id="no-reservations" th:if="${#lists.isEmpty(reservations)}">예약 내역이 없습니다.</p>-->
+<!--    </div>-->
 </div>
 </body>
 </html>
